Tests and solution refinements